tests/typescript/neg/arrays/arr-01.ts
/*@ foo :: ({ #Array[#Immutable,number] | (len v) < 10 } ) => number */
function foo(a) {

  return a[9];

}
